--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(5, 24, 20, 0.9);">
         <div class="container-fluid">
-            <a class="navbar-brand text-light" href=""><img src="/image/logo.png.webp" alt=""></a>
+            <a class="navbar-brand text-light" href=""><img src="./image/logo.png.webp" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidhi">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -112,7 +112,7 @@
     <div class="carousel slide" id="abc" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/image/car1.jpg" height="auto" width="100%" alt="">
+                <img src="./image/car1.jpg" height="auto" width="100%" alt="">
                 <div class="carousel-caption top-50  d-none d-md-block">
                     <h1 class=" linear1 fs-1 w-50 animate__animated  animate__bounceInDown">I am a Photographer</h1>
                     <p class="animate__animated  animate__bounceInDown w-50">I photograph very instinctively. I see how it is taken like that. I do not follow certain styles, philosophies or teachers.</p>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/image/car2.jpg" height="auto" width="100%" alt="">
+                <img src="./image/car2.jpg" height="auto" width="100%" alt="">
                 <div class="carousel-caption top-50 d-none d-md-block">
                     <h1 class="linear1 fs-1 w-50 mt-1 animate__animated  animate__bounceInDown">Hello ,i am alime</h1>
                     <p class="w-50 animate__animated  animate__bounceInDown">I photograph very instinctively. I see how it is taken like that. I do not follow certain styles, philosophies or teachers.</p>
@@ -163,30 +163,30 @@
         <div class="tab-content">
             <div class="tab-pane fade show active" id="abc_1">
                 <div class="container1 mb-5 mt-3">
-                    <img src="/image/3.jpg" class="cls1 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/4.jpg" class="cls2 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/5.jpg" class="cls3 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/6.jpg" class="cls4 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/7.jpg" class="cls5 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/9.jpg" class="cls6 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/8.jpg" class="cls7 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/10.jpg" class="cls8 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/37.jpg" class="cls9 animate__animated animate__fadeInUp" alt="">
-                    <img src="image/5.jpg"  class="cls10 animate__animated animate__fadeInUp" alt="">
-                    <img src="/image/36.jpg" class="cls11 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/3.jpg" class="cls1 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/4.jpg" class="cls2 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/5.jpg" class="cls3 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/6.jpg" class="cls4 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/7.jpg" class="cls5 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/9.jpg" class="cls6 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/8.jpg" class="cls7 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/10.jpg" class="cls8 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/37.jpg" class="cls9 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/5.jpg"  class="cls10 animate__animated animate__fadeInUp" alt="">
+                    <img src="./image/36.jpg" class="cls11 animate__animated animate__fadeInUp" alt="">
                 </div>
             </div>
             <div class="tab-pane fade  " id="aaa">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/4.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/4.jpg" height="auto" width="100%" alt="">
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/10.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/10.jpg" height="auto" width="100%" alt="">
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/11.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/11.jpg" height="auto" width="100%" alt="">
                         </div>
                     </div>
                 </div>
@@ -195,13 +195,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-md-4 col-lg-4">
-                            <img src="/image/12.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/12.jpg" height="auto" width="100%" alt="">
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4">
-                            <img src="/image/13.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/13.jpg" height="auto" width="100%" alt="">
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4">
-                            <img src="/image/14.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/14.jpg" height="auto" width="100%" alt="">
                         </div>
                     </div>
                 </div>
@@ -210,13 +210,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/4.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/4.jpg" height="auto" width="100%" alt="">
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/15.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/15.jpg" height="auto" width="100%" alt="">
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/16.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/16.jpg" height="auto" width="100%" alt="">
                         </div>
                     </div>
                 </div>
@@ -225,13 +225,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/36.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/36.jpg" height="auto" width="100%" alt="">
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/37.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/37.jpg" height="auto" width="100%" alt="">
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
-                            <img src="/image/4.jpg" height="auto" width="100%" alt="">
+                            <img src="./image/4.jpg" height="auto" width="100%" alt="">
                         </div>
                     </div>
                 </div>
@@ -248,37 +248,37 @@
     <div class="container-fluid p-0">
         <div class="row g-0">
             <div class="cont col-12 col-lg-2 col-md-4">
-                <img src="image/5.jpg" height="202px" class="image" width="100%" alt="">
+                <img src="./image/5.jpg" height="202px" class="image" width="100%" alt="">
                 <div class="middle">
                     <div class="text">Photographer</div>
                 </div>
             </div>
             <div class="cont col-12 col-lg-2 col-md-4">
-                <img src="image/13.jpg" height="auto" width="100%" alt="">
+                <img src="./image/13.jpg" height="auto" width="100%" alt="">
                 <div class="middle">
                     <div class="text">Photographer</div>
                 </div>
             </div>
             <div class="cont col-12 col-lg-2 col-md-4">
-                <img src="image/14.jpg" height="auto" width="100%" alt="">
+                <img src="./image/14.jpg" height="auto" width="100%" alt="">
                 <div class="middle">
                     <div class="text">Photographer</div>
                 </div>
             </div>
             <div class="cont col-12 col-lg-2 col-md-4">
-                <img src="image/15.jpg" height="auto" width="100%" alt="">
+                <img src="./image/15.jpg" height="auto" width="100%" alt="">
                 <div class="middle">
                     <div class="text">Photographer</div>
                 </div>
             </div>
             <div class="cont col-12 col-lg-2 col-md-4">
-                <img src="image/16.jpg" height="auto" width="100%" alt="">
+                <img src="./image/16.jpg" height="auto" width="100%" alt="">
                 <div class="middle">
                     <div class="text">Photographer</div>
                 </div>
             </div>
             <div class="cont col-12 col-lg-2 col-md-4">
-                <img src="image/11.jpg" height="auto" width="100%" alt="">
+                <img src="./image/11.jpg" height="auto" width="100%" alt="">
                 <div class="middle">
                     <div class="text">Photographer</div>
                 </div>
@@ -295,7 +295,7 @@
                      
 
                         <div class="footer-logo">
-                            <a href="#"><img src="/image/logo2.png" alt=""></a>
+                            <a href="#"><img src="./image/logo2.png" alt=""></a>
                         </div>
 
                         <div class="social-info">
